--- a/src/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API/appsettings.json
+++ b/src/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost\\SQLEXPRESS; Database=Compugraf; Trusted_Connection=true;"
+  },
   "AllowedHosts": "*"
 }
