--- a/src/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API/Properties/launchSettings.json
+++ b/src/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API/Properties/launchSettings.json
@@ -1,10 +1,11 @@
 ﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:36751",
-      "sslPort": 44380
+      "applicationUrl": "http://localhost:40346",
+      "sslPort": 44338
     }
   },
   "profiles": {
@@ -12,7 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5044",
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5115",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -21,7 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7270;http://localhost:5044",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7142;http://localhost:5115",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -29,6 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
