--- a/src/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API.csproj
+++ b/src/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API/Compugraf.CadastroPessoa.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Compugraf.CadastroPessoa.Business\Compugraf.CadastroPessoa.Business.csproj" />
+    <ProjectReference Include="..\Compugraf.CadastroPessoa.Repository\Compugraf.CadastroPessoa.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
